--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-	"name": "Hisoka-Morou",
+	"name": "Ichika-MD",
 	"description": "WhatsApp Bot Using Lib Baileys",
-	"repository": "https://github.com/DikaArdnt/Hisoka-Morou",
+	"repository": "https://github.com/FahriAdison/Ichika-MD",
 	"logo": "https://node-js-sample.herokuapp.com/node.png",
 	"keywords": ["multi-device"]
 }
